feat(12-01): add Taehoon Kim to Trust section tutors
- Added 4th tutor card to Trust section
- Taehoon Kim: Tutor & Head Admin, BHHS Graduate
- 95 Maths Ext1, Optometry @ UNSW, 1540 SAT
- Used inline object-position for image cropping

--- a/index.html
+++ b/index.html
@@ -5962,6 +5962,24 @@
                             <li>96 Maths Ext2</li>
                         </ul>
                     </article>
+
+                    <!-- Taehoon Kim -->
+                    <article class="tutor-card">
+                        <div class="tutor-image">
+                            <img src="images/taehoon.jpg" alt="Taehoon Kim, Tutor & Head Admin at BEAM Academy" width="400" height="400" loading="lazy" style="object-position: center top;">
+                        </div>
+                        <h3 class="tutor-name">Taehoon Kim</h3>
+                        <div class="tutor-role">Tutor & Head Admin</div>
+                        <div class="tutor-trifecta">
+                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
+                            <span class="trifecta-badge trifecta-hsc">95 Maths Ext1</span>
+                            <span class="trifecta-badge trifecta-uni">Optometry @ UNSW</span>
+                        </div>
+                        <ul class="tutor-credentials">
+                            <li>1540 SAT</li>
+                            <li>4 years tutoring experience</li>
+                        </ul>
+                    </article>
                 </div>
 
                 <p class="trust-schools">Tutors who know your school's assessment style - Baulko, James Ruse, Epping Boys</p>
