--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,24 @@
             margin-bottom: 48px;
         }
 
+        .trust-testimonials {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 24px;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .student-quote {
+            font-size: 1.05rem;
+            color: var(--gray-700);
+            margin-bottom: 24px;
+            font-style: italic;
+            line-height: 1.7;
+            position: relative;
+            z-index: 1;
+        }
+
         .trust-testimonial {
             background: white;
             border-radius: 24px;
@@ -4289,6 +4307,10 @@
                 text-align: center;
             }
 
+            .trust-testimonials {
+                grid-template-columns: 1fr;
+            }
+
             .trust-testimonial {
                 padding: 28px;
             }
@@ -5984,17 +6006,45 @@
 
                 <p class="trust-schools">Tutors who know your school's assessment style - Baulko, James Ruse, Epping Boys</p>
 
-                <div class="trust-testimonial">
-                    <blockquote class="parent-quote">
-                        After 2 terms at BEAM, my son's Maths assessment improved from <strong>68% to 89%</strong>. The tutors identified exactly which topics he was struggling with.
-                    </blockquote>
-                    <div class="testimonial-author">
-                        <div class="testimonial-avatar" aria-hidden="true">P</div>
-                        <div>
-                            <div class="testimonial-name">Parent of Year 11 Student</div>
-                            <div class="testimonial-school">Baulkham Hills High School</div>
+                <div class="trust-testimonials">
+                    <article class="trust-testimonial">
+                        <blockquote class="parent-quote">
+                            After 2 terms at BEAM, my son's Maths assessment improved from <strong>68% to 89%</strong>. The tutors identified exactly which topics he was struggling with.
+                        </blockquote>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar" aria-hidden="true">P</div>
+                            <div>
+                                <div class="testimonial-name">Parent of Year 11 Student</div>
+                                <div class="testimonial-school">Baulkham Hills High School</div>
+                            </div>
                         </div>
-                    </div>
+                    </article>
+
+                    <article class="trust-testimonial student-testimonial">
+                        <blockquote class="student-quote">
+                            "My only regret in life is not joining BEAM earlier, but this week has changed the entire course of my life."
+                        </blockquote>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar" aria-hidden="true">K</div>
+                            <div>
+                                <div class="testimonial-name">Kane W</div>
+                                <div class="testimonial-school">BHHS Class of 2028</div>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="trust-testimonial student-testimonial">
+                        <blockquote class="student-quote">
+                            "I really like the way BEAM teaches because it's so much more engaging and easy to understand than school."
+                        </blockquote>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar" aria-hidden="true">L</div>
+                            <div>
+                                <div class="testimonial-name">Lena Y</div>
+                                <div class="testimonial-school">PHCS Class of 2028</div>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
