--- a/index.html
+++ b/index.html
@@ -1394,23 +1394,20 @@
         }
 
         .trust-tutors {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
             gap: 24px;
-            max-width: 900px;
+            max-width: 1100px;
             margin: 0 auto 40px;
-            flex-wrap: wrap;
         }
 
         .tutor-card {
             text-align: center;
             background: white;
             border-radius: 24px;
-            padding: 36px;
+            padding: 28px;
             transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
             border: 1px solid var(--gray-100);
-            flex: 0 1 400px;
-            max-width: 400px;
         }
 
         .tutor-card:hover {
@@ -4091,6 +4088,10 @@
             .testimonials-grid { grid-template-columns: 1fr; }
             .footer-content { grid-template-columns: 1fr 1fr; }
             .portal-features { grid-template-columns: 1fr; }
+
+            .trust-tutors {
+                grid-template-columns: 1fr;
+            }
         }
 
         @media (max-width: 768px) {
@@ -4266,12 +4267,11 @@
             }
 
             .trust-tutors {
+                grid-template-columns: repeat(2, 1fr);
                 gap: 16px;
             }
 
             .tutor-card {
-                flex: 0 1 180px;
-                max-width: 180px;
                 padding: 16px;
             }
 
