--- a/index.html
+++ b/index.html
@@ -1614,7 +1614,8 @@
             font-family: var(--font-display);
             font-size: 0.9rem;
             font-weight: 600;
-            margin-bottom: 72px;
+            margin-top: 48px;
+            margin-bottom: 24px;
         }
 
         .support-badge svg,
