--- a/index.html
+++ b/index.html
@@ -951,7 +951,8 @@
         }
 
         .floating-card:hover {
-            transform: translateY(-4px);
+            background: rgba(255, 255, 255, 0.05);
+            transform: translateY(-2px);
             box-shadow: 0 16px 40px rgba(0, 0, 0, 0.12);
         }
 
@@ -1052,7 +1053,8 @@
         }
 
         .document-card:hover {
-            transform: translateY(-4px);
+            background: rgba(255, 255, 255, 0.05);
+            transform: translateY(-2px);
             box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1);
             border-color: var(--purple-200);
         }
@@ -1411,7 +1413,8 @@
         }
 
         .tutor-card:hover {
-            transform: translateY(-4px);
+            background: rgba(255, 255, 255, 0.05);
+            transform: translateY(-2px);
             box-shadow: 0 12px 32px rgba(0, 0, 0, 0.08);
             border-color: var(--purple-200);
         }
@@ -1540,7 +1543,7 @@
             text-align: center;
             color: var(--gray-500);
             font-size: 0.95rem;
-            margin-bottom: 48px;
+            margin-bottom: 32px;
         }
 
         .trust-testimonials {
@@ -1973,20 +1976,46 @@
         }
 
         .pricing-tier-new {
-            background: var(--gray-900);
-            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 24px;
             padding: 32px;
-            border: 1px solid var(--gray-700);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             position: relative;
             display: flex;
             flex-direction: column;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .pricing-tier-new:hover {
+            transform: translateY(-4px);
+            border-color: rgba(124, 58, 237, 0.4);
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.15);
         }
 
         .pricing-tier-new.featured-tier {
-            background: var(--gray-800);
+            background: rgba(124, 58, 237, 0.1);
             border: 2px solid var(--purple-500);
-            transform: scale(1.02);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+        }
+
+        .pricing-tier-new.featured-tier:hover {
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.25);
+        }
+
+        .pricing-tier-new.featured-tier::before {
+            content: 'Most Popular';
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
+            color: white;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            white-space: nowrap;
         }
 
         .featured-badge {
@@ -1994,14 +2023,14 @@
             top: -12px;
             left: 50%;
             transform: translateX(-50%);
-            background: var(--purple-600);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
             color: white;
-            padding: 6px 20px;
-            border-radius: 20px;
-            font-size: 0.75rem;
-            font-weight: 700;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.05em;
         }
 
         .tier-header {
@@ -2026,15 +2055,15 @@
         .tier-price-main {
             text-align: center;
             padding: 20px 0;
-            border-top: 1px solid var(--gray-700);
-            border-bottom: 1px solid var(--gray-700);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             margin-bottom: 20px;
         }
 
         .price-from {
             display: block;
-            font-size: 0.8rem;
-            color: var(--gray-500);
+            font-size: 0.9rem;
+            color: var(--gray-400);
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 4px;
@@ -2043,12 +2072,13 @@
         .price-amount {
             font-family: var(--font-display);
             font-size: 3rem;
-            font-weight: 800;
+            font-weight: 700;
             color: white;
+            line-height: 1;
         }
 
         .price-period {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: var(--gray-400);
         }
 
@@ -2187,7 +2217,7 @@
 
         .featured-tier .tier-cta:hover {
             background: var(--purple-500);
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
         }
 
         @media (max-width: 900px) {
@@ -2214,10 +2244,10 @@
         }
 
         .pricing-tier {
-            background: var(--gray-800);
+            background: transparent;
             border-radius: 24px;
             padding: 40px;
-            border: 1px solid var(--gray-700);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -2282,13 +2312,13 @@
         }
 
         .package-card:hover {
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
             transform: translateY(-2px);
         }
 
         .package-card.featured {
             background: var(--purple-600);
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
         }
 
         .package-badge {
@@ -2375,7 +2405,7 @@
             display: flex;
             justify-content: center;
             gap: 8px;
-            margin-bottom: 48px;
+            margin-bottom: 32px;
             flex-wrap: wrap;
         }
 
@@ -2385,22 +2415,22 @@
             font-family: var(--font-display);
             font-size: 0.95rem;
             font-weight: 500;
-            background: var(--gray-800);
+            background: transparent;
             color: var(--gray-400);
-            border: 1px solid var(--gray-700);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             cursor: pointer;
             transition: all 0.2s ease;
         }
 
         .year-tab:hover {
-            border-color: var(--purple-500);
+            border-color: var(--purple-400);
             color: var(--white);
         }
 
         .year-tab.active {
-            background: var(--purple-700);
+            background: var(--purple-600);
             color: white;
-            border-color: var(--purple-700);
+            border-color: var(--purple-600);
         }
 
         /* Course Grid */
@@ -2411,26 +2441,27 @@
         }
 
         .course-card {
-            background: var(--gray-800);
-            border-radius: 20px;
-            padding: 28px;
-            border: 1px solid var(--gray-700);
+            background: rgba(255, 255, 255, 0.02);
+            border-radius: 16px;
+            padding: 24px;
+            border: 1px solid rgba(255, 255, 255, 0.08);
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
+            gap: 12px;
         }
 
         .course-card:hover {
-            transform: translateY(-4px);
-            border-color: var(--purple-500);
-            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.3);
+            background: rgba(255, 255, 255, 0.05);
+            transform: translateY(-2px);
+            border-color: rgba(124, 58, 237, 0.3);
         }
 
         .course-card-header {
             display: flex;
             justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 16px;
+            align-items: center;
+            margin-bottom: 8px;
             gap: 8px;
         }
 
@@ -2444,9 +2475,9 @@
             font-family: var(--font-display);
             font-size: 0.75rem;
             font-weight: 600;
-            color: var(--purple-300);
-            background: rgba(168, 85, 247, 0.2);
-            padding: 6px 12px;
+            color: white;
+            background: var(--purple-600);
+            padding: 4px 12px;
             border-radius: 100px;
         }
 
@@ -2478,35 +2509,38 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.5rem;
-            margin-bottom: 16px;
+            font-size: 2rem;
+            margin-bottom: 8px;
         }
 
         .course-card h3 {
-            font-size: 1.15rem;
+            font-size: 1.1rem;
+            font-weight: 600;
             color: var(--white);
-            margin-bottom: 12px;
+            margin: 0;
         }
 
         .course-card p {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: var(--gray-400);
-            line-height: 1.6;
-            flex-grow: 1;
-            margin-bottom: 20px;
+            line-height: 1.5;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
 
         .course-card-footer {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding-top: 16px;
-            border-top: 1px solid var(--gray-700);
+            margin-top: auto;
         }
 
         .course-price {
             font-family: var(--font-display);
-            font-weight: 600;
+            font-size: 1.15rem;
+            font-weight: 700;
             color: var(--white);
         }
 
@@ -2517,20 +2551,24 @@
         }
 
         .course-btn {
-            padding: 10px 20px;
+            padding: 8px 16px;
             border-radius: 100px;
             font-family: var(--font-display);
             font-size: 0.85rem;
             font-weight: 600;
-            background: var(--purple-600);
-            color: white;
-            border: none;
+            background: transparent;
+            color: var(--purple-400);
+            border: 1px solid var(--purple-500);
             cursor: pointer;
             transition: all 0.2s ease;
             text-decoration: none;
         }
 
-        .course-btn:hover { background: var(--purple-700); }
+        .course-btn:hover {
+            background: var(--purple-600);
+            border-color: var(--purple-600);
+            color: white;
+        }
 
         .pricing-note {
             text-align: center;
@@ -2769,7 +2807,7 @@
         .social-link {
             width: 40px;
             height: 40px;
-            background: var(--gray-800);
+            background: transparent;
             border-radius: 10px;
             display: flex;
             align-items: center;
@@ -3171,20 +3209,46 @@
         }
 
         .pricing-tier-new {
-            background: var(--gray-900);
-            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 24px;
             padding: 32px;
-            border: 1px solid var(--gray-700);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             position: relative;
             display: flex;
             flex-direction: column;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .pricing-tier-new:hover {
+            transform: translateY(-4px);
+            border-color: rgba(124, 58, 237, 0.4);
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.15);
         }
 
         .pricing-tier-new.featured-tier {
-            background: var(--gray-800);
+            background: rgba(124, 58, 237, 0.1);
             border: 2px solid var(--purple-500);
-            transform: scale(1.02);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+        }
+
+        .pricing-tier-new.featured-tier:hover {
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.25);
+        }
+
+        .pricing-tier-new.featured-tier::before {
+            content: 'Most Popular';
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
+            color: white;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            white-space: nowrap;
         }
 
         .featured-badge {
@@ -3192,14 +3256,14 @@
             top: -12px;
             left: 50%;
             transform: translateX(-50%);
-            background: var(--purple-600);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
             color: white;
-            padding: 6px 20px;
-            border-radius: 20px;
-            font-size: 0.75rem;
-            font-weight: 700;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.05em;
         }
 
         .tier-header {
@@ -3224,15 +3288,15 @@
         .tier-price-main {
             text-align: center;
             padding: 20px 0;
-            border-top: 1px solid var(--gray-700);
-            border-bottom: 1px solid var(--gray-700);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             margin-bottom: 20px;
         }
 
         .price-from {
             display: block;
-            font-size: 0.8rem;
-            color: var(--gray-500);
+            font-size: 0.9rem;
+            color: var(--gray-400);
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 4px;
@@ -3241,12 +3305,13 @@
         .price-amount {
             font-family: var(--font-display);
             font-size: 3rem;
-            font-weight: 800;
+            font-weight: 700;
             color: white;
+            line-height: 1;
         }
 
         .price-period {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: var(--gray-400);
         }
 
@@ -3385,7 +3450,7 @@
 
         .featured-tier .tier-cta:hover {
             background: var(--purple-500);
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
         }
 
         @media (max-width: 900px) {
@@ -3431,20 +3496,46 @@
         }
 
         .pricing-tier-new {
-            background: var(--gray-900);
-            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 24px;
             padding: 32px;
-            border: 1px solid var(--gray-700);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             position: relative;
             display: flex;
             flex-direction: column;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .pricing-tier-new:hover {
+            transform: translateY(-4px);
+            border-color: rgba(124, 58, 237, 0.4);
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.15);
         }
 
         .pricing-tier-new.featured-tier {
-            background: var(--gray-800);
+            background: rgba(124, 58, 237, 0.1);
             border: 2px solid var(--purple-500);
-            transform: scale(1.02);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+        }
+
+        .pricing-tier-new.featured-tier:hover {
+            box-shadow: 0 20px 60px rgba(124, 58, 237, 0.25);
+        }
+
+        .pricing-tier-new.featured-tier::before {
+            content: 'Most Popular';
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
+            color: white;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            white-space: nowrap;
         }
 
         .featured-badge {
@@ -3452,14 +3543,14 @@
             top: -12px;
             left: 50%;
             transform: translateX(-50%);
-            background: var(--purple-600);
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
             color: white;
-            padding: 6px 20px;
-            border-radius: 20px;
-            font-size: 0.75rem;
-            font-weight: 700;
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-size: 0.8rem;
+            font-weight: 600;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.05em;
         }
 
         .tier-header {
@@ -3484,15 +3575,15 @@
         .tier-price-main {
             text-align: center;
             padding: 20px 0;
-            border-top: 1px solid var(--gray-700);
-            border-bottom: 1px solid var(--gray-700);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             margin-bottom: 20px;
         }
 
         .price-from {
             display: block;
-            font-size: 0.8rem;
-            color: var(--gray-500);
+            font-size: 0.9rem;
+            color: var(--gray-400);
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 4px;
@@ -3501,12 +3592,13 @@
         .price-amount {
             font-family: var(--font-display);
             font-size: 3rem;
-            font-weight: 800;
+            font-weight: 700;
             color: white;
+            line-height: 1;
         }
 
         .price-period {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: var(--gray-400);
         }
 
@@ -3645,7 +3737,7 @@
 
         .featured-tier .tier-cta:hover {
             background: var(--purple-500);
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
         }
 
         @media (max-width: 900px) {
@@ -4136,7 +4228,7 @@
         }
 
         .form-input:focus, .form-textarea:focus, .form-select:focus {
-            border-color: var(--purple-500);
+            border-color: rgba(124, 58, 237, 0.3);
             box-shadow: 0 0 0 4px rgba(124, 58, 237, 0.1);
         }
 
@@ -5827,7 +5919,7 @@
                         <a href="#contact" class="tier-cta">Start Free</a>
                     </article>
 
-                    <article class="pricing-tier-new">
+                    <article class="pricing-tier-new featured-tier">
                         <div class="tier-header">
                             <h3 class="tier-name">Intermediate</h3>
                             <p class="tier-years">Years 9-10</p>
