feat(14-01): add mobile responsive adjustments for pricing tiers
- Tiers stack vertically on mobile (max-width: 900px)
- Featured tier moves to top with order: -1
- Reduced gap and padding for mobile
- Price font-size reduced to 2.5rem on mobile
- Minimum touch target of 44px for package items
- Reduced shadow intensity on featured tier for mobile

--- a/index.html
+++ b/index.html
@@ -2229,11 +2229,30 @@
             .pricing-tiers-new {
                 grid-template-columns: 1fr;
                 max-width: 400px;
+                gap: 20px;
             }
             
+            .pricing-tier-new {
+                padding: 24px;
+            }
+
             .pricing-tier-new.featured-tier {
                 transform: none;
                 order: -1;
+                box-shadow: 0 10px 40px rgba(124, 58, 237, 0.15);
+            }
+
+            .pricing-tier-new.featured-tier::before {
+                font-size: 0.75rem;
+                padding: 6px 16px;
+            }
+
+            .price-amount {
+                font-size: 2.5rem;
+            }
+
+            .tier-packages li {
+                min-height: 44px;
             }
         }
 
@@ -3467,11 +3486,30 @@
             .pricing-tiers-new {
                 grid-template-columns: 1fr;
                 max-width: 400px;
+                gap: 20px;
             }
             
+            .pricing-tier-new {
+                padding: 24px;
+            }
+
             .pricing-tier-new.featured-tier {
                 transform: none;
                 order: -1;
+                box-shadow: 0 10px 40px rgba(124, 58, 237, 0.15);
+            }
+
+            .pricing-tier-new.featured-tier::before {
+                font-size: 0.75rem;
+                padding: 6px 16px;
+            }
+
+            .price-amount {
+                font-size: 2.5rem;
+            }
+
+            .tier-packages li {
+                min-height: 44px;
             }
         }
 
