--- a/index.html
+++ b/index.html
@@ -2233,6 +2233,24 @@
                 transform: none;
                 order: -1;
             }
+
+            .pricing-tier-new {
+                box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+            }
+
+            .pricing-tier-new:hover {
+                transform: none;
+                box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+            }
+
+            .course-card {
+                box-shadow: 0 1px 8px rgba(0, 0, 0, 0.15);
+            }
+
+            .course-card:hover {
+                transform: none;
+                box-shadow: 0 1px 8px rgba(0, 0, 0, 0.15);
+            }
         }
 
 
